<resources>
    <string name="app_name">TAS-ON</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Nuevas solicitudes</string>
    <string name="prompt_user_name">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_enroll_in">Enrolarse</string>
    <string name="action_recovy_pass">Recuperar contraseña</string>
    <string name="action_solicitudes">Solicitudes</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user_name">Nombre de usuario invalido</string>
    <string name="error_invalid_password">La contraseña es demaciado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">Se requiere permisos para acceder a contactos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Inciar sesión</string>
    <string name="title_activity_detail_fragment">Detalle</string>
    <string name="title_activity_genera_factura">Generar prefactura</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Buscar</string>
    <string name="action_delete">Borrar</string>
    <string name="my_oferts">Mis ofertas</string>
    <string name="approved">Aprobadas</string>
    <string name="to_recieving">Por recibir</string>
    <string name="to_deliver">Por entregar</string>
    <string name="por_generar_fact">Por generar factura</string>
    <string name="por_entregar_fact">Por entregar factura</string>
    <string name="collect">Por cobrar</string>
    <string name="finished">Finalizadas</string>
    <string name="cancelled">Canceladas</string>
    <string name="in_progress">En curso</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_borrar">Borrar</string>
    <string name="acep_terms_y_cond">Aceptar términos y condiciones:</string>
    <string name="Terms_and_conditions">Términos y condiciones</string>
    <string name="Terms_and_conditions_link"><u>Términos y condiciones</u></string>
    <string name="numero_factura">No. factura:</string>
    <string name="guia_remision">Guía remisión:</string>
    <string name="solic_new"><![CDATA[    Ingresar nuevas]]></string>
    <string name="solic_offer"><![CDATA[    Solicitudes ofertadas]]></string>
    <string name="solicitudes">Solicitudes</string>
    <string name="search_freight">Buscar fletes</string>
    <string name="my_freights">Mis fletes</string>
    <string name="e_billing">Facturación electrónica</string>
    <string name="my_ebilling_generated">Mis facturas generadas</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="razon_social">Razon social</string>
    <string name="ruc">RUC</string>
    <string name="direccion">Dirección</string>
    <string name="adquiriente">Adquiriente</string>
    <string name="tipo_documento">Tipo documento</string>
    <string name="numero_documento">Número de documento</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="persona_contacto">Persona de contacto</string>
    <string name="mensaje_usuario_no_habil_facturacion_electronica">Aún no estás habilitado para facturación electrónica.\nEl usuario administrador de tu empresa puede habilitarlo realizando los siguientes pasos:</string>
    <string name="paso_uno_habilitar_ebilling">Inicia sesión en www.tas-on.com</string>
    <string name="paso_dos_ebilling">Dirígete a la opción Facturación electrónica -> Actualización datos></string>
    <string name="paso_tres_ebilling">Ingresa los datos solicitados</string>
    <string name="facturacion_electronica">Facturación electrónica</string>
</resources>