<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ebilling_step_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:visibility="gone"
    tools:context="ec.redcode.tas.on.android.fragments.ebilling.EBillingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/cont_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tasLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                    android:text="@string/adquiriente"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/tipo_documento"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <Spinner
                    android:id="@+id/cmbTipoDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/numero_documento"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <EditText
                    android:id="@+id/txtNumDocAdquiriente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loading_adquiriente_info"
                    android:visibility="gone">
                    <include layout="@layout/loading_info"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytDatosAdquiriente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/razon_social"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <EditText
                        android:id="@+id/txtRazonSocialAdquiriente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="150"
                        android:singleLine="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/direccion"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <EditText
                        android:id="@+id/txtDireccionAdquiriente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="250"
                        android:singleLine="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/telefono"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <EditText
                        android:id="@+id/txtTelefonoAdquiriente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/correo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <EditText
                        android:id="@+id/txtCorreoAdquiriente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:singleLine="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/persona_contacto"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <EditText
                        android:id="@+id/txtPersonaContacto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="100"
                        android:singleLine="true"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

